@@ -1,5 +1,6 @@
 Changes for 1.8.1
 
+ - [ZBX-1652] fixed user media deletion on profile save (Aly)
  - [ZBX-1641] fixed handling of "Include" statement in configuration files (Sasha)
  - [ZBX-1580] reduced frontend memory usage (Vedmak)
  - [ZBX-1663] fixed y axis calculation in stacked graphs (Aly)
